// src\user\user.module.ts

import { Module } from '@nestjs/common';
import { UserController } from '~/src/user/user.controller';
import { UserService } from '~/src/user/user.service';

@Module({
  controllers: [UserController],
  providers: [UserService],
})
export class UserModule {}
