%% src\user\user.diagram.mmd

classDiagram
    %% DTOs
    class CreateUserDto {
        +user_name: string
        +email: string
        +password: string
        +role: role
    }
    class UpdateUserDto
    UpdateUserDto --|> CreateUserDto : extends (PartialType)

    class UserResponseDto {
        +id: number
        +user_name: string
        +email: string
        +role: role
        +deleted_at?: Date | null
    }

    %% Service
    class UserService {
        +constructor(prisma: PrismaService)
        +create(data: CreateUserDto): Promise<user>
        +findAll(): Promise<user[]>
        +findOne(id: number): Promise<user | null>
        +update(id: number, data: UpdateUserDto): Promise<user>
        +remove(id: number): Promise<user>
    }

    %% Controller
    class UserController {
        +constructor(userService: UserService)
        +create(createUserDto: CreateUserDto): Promise<UserResponseDto>
        +findAll(): Promise<UserResponseDto[]>
        +findOne(id: string): Promise<UserResponseDto>
        +update(id: string, updateUserDto: UpdateUserDto): Promise<UserResponseDto>
        +remove(id: string): Promise<UserResponseDto>
    }

    %% Module
    class UserModule {
        <<Module>>
    }

    %% Relationships
    UserController --> UserService : depends on
    UserController ..> CreateUserDto : uses
    UserController ..> UpdateUserDto : uses
    UserController ..> UserResponseDto : returns
    UserService ..> CreateUserDto : uses
    UserService ..> UpdateUserDto : uses
    UserModule o-- UserController : provides
    UserModule o-- UserService : provides
